# xml_parser

./: .gitignore  alembic.ini  main.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 2025_03_26_1154-44ea5008872a_init_db.py  2025_03_26_1157-bb0073626902_create_files_tags_attribute_models.py  2025_03_26_2125-b4c0a4abcc5f_create_files_tags_attribute_models.py  2025_03_27_1507-986fb9a72185_refresh_structure.py
app/: __init__.py  config.py  db_helper.py  models.py
app/api/: __init__.py  resources.py  schemas.py  services.py  xml_parser.py
files/: file.xml
