[project]
name = "xml-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "vktadm",email = "tarnavskayavictoria@gmail.com"}
]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "environs (>=14.1.1,<15.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
