[project]
name = "xml-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "vktadm",email = "tarnavskayavictoria@gmail.com"}
]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "environs (>=14.1.1,<15.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "flask-pydantic (>=0.12.0,<0.13.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
